...
          />
          <Stack.Screen
            name="search"
            options={{
              presentation: 'modal',
              headerShown: true,
              title: 'Search',
            }}
          />
        </Stack>
      </View>
    </View>
  );
...
